--- a/html/index.html
+++ b/html/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trang chủ</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>thanh phuc</h1>
+    <header>
+        <div class="upper-header">
+            <a href=""><img src="/img/logo-ngang.png" alt=""></a>
+            <div>
+
+            </div>
+        </div>
+    </header>
 </body>
 </html>
